<resources>
    <string name="app_name">AniShuu</string>

    <!-- Overflow menu items -->
    <string name="menu_delete_all">Delete All Items</string>
    <string name="menu_delete_item">Delete Item</string>
    <string name="menu_add_item">Add Item</string>

    <!-- Update Collection screen -->
    <string name="hint_title">Title</string>
    <string name="hint_number_volumes">Number of Volumes</string>
    <string name="hint_language">Language</string>
    <string name="hint_author">Author</string>
    <string name="hint_publisher">Publisher</string>
    <string name="hint_notes">Notes</string>
    <string name="button_save">Save</string>
    <string name="empty_not_saved">Manga not saved because it is empty.</string>
    <string name="add_manga">Add Manga</string>
    <string name="volume_number">Volume %d</string>
    <string name="title_required">Title is required to save manga</string>
    <string name="select_all">Select All</string>
    <string name="select_none">Select None</string>

    <!-- Manga Collection Details screen -->
    <string name="manga_details_num_volumes">Number of volumes: %d</string>
    <string name="manga_details_language">Language: %s</string>
    <string name="manga_details_author">Author: %s</string>
    <string name="manga_details_publisher">Publisher: %s</string>
    <string name="manga_details_notes">Notes: %s</string>
    <string name="manga_details_volumes_owned">Volumes owned: %s</string>
    <string name="manga_owned_count">Owned: %d/%d</string>
    <string-array name="manga_details_tab_names">
        <item>Details</item>
        <item>Collection</item>
    </string-array>

    <!-- Manga Search Result Details Screen -->
    <string name="manga_result_details_date">%d/%d/%d</string>
    <string name="manga_status_volumes">%s\u30FBVolumes: %d</string>
    <string name="edit_collection">Edit Collection</string>
    <string name="add_to_collection">Add to Collection</string>

    <!-- Widget Text -->
    <!-- Action Button -->
    <string name="action_button_add_to_collection">Add to Collection</string>
    <string name="action_button_edit_collection">Edit Collection</string>
    <string name="action_button_view_collection">View Collection</string>
</resources>
