<?xml version="1.0" encoding="utf-8"?>
<layout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <EditText
                android:id="@+id/title_entry"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:minHeight="@dimen/min_height"
                android:fontFamily="sans-serif-light"
                android:hint="@string/hint_title"
                android:inputType="textAutoComplete"
                android:layout_margin="@dimen/big_padding"
                android:textSize="18sp"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintTop_toTopOf="parent"/>

            <EditText
                android:id="@+id/num_volumes_entry"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:minHeight="@dimen/min_height"
                android:fontFamily="sans-serif-light"
                android:hint="@string/hint_number_volumes"
                android:inputType="number"
                android:layout_margin="@dimen/big_padding"
                android:textSize="18sp"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintTop_toBottomOf="@id/title_entry"/>

            <EditText
                android:id="@+id/language_entry"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:minHeight="@dimen/min_height"
                android:fontFamily="sans-serif-light"
                android:hint="@string/hint_language"
                android:inputType="textAutoComplete"
                android:layout_margin="@dimen/big_padding"
                android:textSize="18sp"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintTop_toBottomOf="@id/num_volumes_entry"/>

            <EditText
                android:id="@+id/author_entry"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:minHeight="@dimen/min_height"
                android:fontFamily="sans-serif-light"
                android:hint="@string/hint_author"
                android:inputType="textAutoComplete"
                android:layout_margin="@dimen/big_padding"
                android:textSize="18sp"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintTop_toBottomOf="@id/language_entry"/>

            <EditText
                android:id="@+id/publisher_entry"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:minHeight="@dimen/min_height"
                android:fontFamily="sans-serif-light"
                android:hint="@string/hint_publisher"
                android:inputType="textAutoComplete"
                android:layout_margin="@dimen/big_padding"
                android:textSize="18sp"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintTop_toBottomOf="@id/author_entry"/>

            <EditText
                android:id="@+id/notes_entry"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:minHeight="@dimen/min_height"
                android:fontFamily="sans-serif-light"
                android:hint="@string/hint_notes"
                android:inputType="textAutoComplete"
                android:layout_margin="@dimen/big_padding"
                android:textSize="18sp"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintTop_toBottomOf="@id/publisher_entry"/>

            <com.google.android.material.button.MaterialButton
                android:id="@+id/button_save"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:clickable="true"
                android:text="@string/button_save"
                android:layout_margin="@dimen/big_padding"
                android:textColor="@color/buttonLabel"
                app:elevation="8dp"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintTop_toBottomOf="@id/notes_entry"/>

            <com.google.android.material.button.MaterialButton
                android:id="@+id/select_all"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:text="@string/select_all"
                android:textColor="@color/buttonLabel"
                android:layout_marginStart="8dp"
                android:layout_marginTop="8dp"
                android:layout_marginEnd="4dp"
                android:layout_marginBottom="8dp"
                app:elevation="8dp"
                app:layout_constraintHorizontal_chainStyle="spread"
                app:layout_constraintHorizontal_weight="1"
                app:layout_constraintTop_toBottomOf="@id/button_save"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toStartOf="@id/select_none"
                app:layout_constraintBottom_toTopOf="@id/volume_recyclerview" />

            <com.google.android.material.button.MaterialButton
                android:id="@+id/select_none"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:text="@string/select_none"
                android:textColor="@color/buttonLabel"
                android:layout_marginStart="4dp"
                android:layout_marginTop="8dp"
                android:layout_marginEnd="8dp"
                android:layout_marginBottom="8dp"
                app:elevation="8dp"
                app:layout_constraintHorizontal_weight="1"
                app:layout_constraintTop_toTopOf="@id/select_all"
                app:layout_constraintStart_toEndOf="@id/select_all"
                app:layout_constraintBottom_toBottomOf="@id/select_all"
                app:layout_constraintEnd_toEndOf="parent" />

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/volume_recyclerview"
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:nestedScrollingEnabled="false"
                android:layout_marginTop="@dimen/big_padding"
                android:layout_marginBottom="@dimen/big_padding"
                android:visibility="gone"
                tools:listitem="@layout/manga_adapter_item"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintTop_toBottomOf="@id/select_all"/>

        </androidx.constraintlayout.widget.ConstraintLayout>
    </ScrollView>
</layout>